unpackaged/main/default/objects/KBA_Details__c/KBA_Details__c.object-meta.xml
<CustomObject>
    <label>KBA Details</label>
    <nameField>
        <label>KBA Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KBA Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>