unpackaged/main/default/objects/KBA_Details__c/fields/Accept_Refer_Code__c.field-meta.xml
<CustomField>
    <fullName>Accept_Refer_Code__c</fullName>
    <label>Accept Refer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>