unpackaged/main/default/objects/KBA_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KBA Details</relationshipLabel>
    <relationshipName>KBA_Details</relationshipName>
    <type>Lookup</type>
</CustomField>