unpackaged/main/default/objects/KBA_Details__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>KBA Details</relationshipLabel>
    <relationshipName>KBA_Details</relationshipName>
    <type>Lookup</type>
</CustomField>