unpackaged/main/default/objects/KBA_Details__c/fields/Consistency_Snapd_score__c.field-meta.xml
<CustomField>
    <fullName>Consistency_Snapd_score__c</fullName>
    <label>Consistency Snapd score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>