unpackaged/main/default/objects/KBA_Details__c/fields/Date_of_Birth_Match__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Match__c</fullName>
    <label>Date of Birth Match</label>
    <length>50</length>
    <type>Text</type>
</CustomField>