unpackaged/main/default/objects/KBA_Details__c/fields/Date_of_Birth_Match_Description__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Match_Description__c</fullName>
    <label>Date of Birth Match Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>