unpackaged/main/default/objects/KBA_Details__c/fields/Fraud_Description__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Description__c</fullName>
    <label>Fraud Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>