unpackaged/main/default/objects/KBA_Details__c/fields/Id_Analytics_Score__c.field-meta.xml
<CustomField>
    <fullName>Id_Analytics_Score__c</fullName>
    <label>Id Analytics Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>