unpackaged/main/default/objects/KBA_Details__c/fields/IsKBA_06__c.field-meta.xml
<CustomField>
    <fullName>IsKBA_06__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsKBA_06</label>
    <type>Checkbox</type>
</CustomField>