unpackaged/main/default/objects/KBA_Details__c/fields/IsKBA_18__c.field-meta.xml
<CustomField>
    <fullName>IsKBA_18__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsKBA_18</label>
    <type>Checkbox</type>
</CustomField>