unpackaged/main/default/objects/KBA_Details__c/fields/KBA_Attempts__c.field-meta.xml
<CustomField>
    <fullName>KBA_Attempts__c</fullName>
    <label>KBA Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>