unpackaged/main/default/objects/KBA_Details__c/fields/OFAC_Description__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Description__c</fullName>
    <label>OFAC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>