unpackaged/main/default/objects/KBA_Details__c/fields/Paste_Count__c.field-meta.xml
<CustomField>
    <fullName>Paste_Count__c</fullName>
    <label>Paste Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>