unpackaged/main/default/objects/KBA_Details__c/fields/Phone_Verification_Result__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verification_Result__c</fullName>
    <label>Phone Verification Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>