unpackaged/main/default/objects/KBA_Details__c/fields/Phone_Verification_Result_Description__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verification_Result_Description__c</fullName>
    <label>Phone Verification Result Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>