unpackaged/main/default/objects/KBA_Details__c/fields/Precise_ID_Adverse_Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Precise_ID_Adverse_Action_Code__c</fullName>
    <label>Precise ID Adverse Action Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>