unpackaged/main/default/objects/KBA_Details__c/fields/Precise_ID_Decision_KIQ__c.field-meta.xml
<CustomField>
    <fullName>Precise_ID_Decision_KIQ__c</fullName>
    <label>Precise ID Decision (KIQ)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>