unpackaged/main/default/objects/KBA_Details__c/fields/Precise_ID_Fraud_Classification__c.field-meta.xml
<CustomField>
    <fullName>Precise_ID_Fraud_Classification__c</fullName>
    <label>Precise ID Fraud Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>