unpackaged/main/default/objects/KBA_Details__c/fields/Precise_ID_General_Fraud_Shield_Indicat__c.field-meta.xml
<CustomField>
    <fullName>Precise_ID_General_Fraud_Shield_Indicat__c</fullName>
    <label>Precise ID General (Fraud Shield Indicat</label>
    <length>200</length>
    <type>Text</type>
</CustomField>