unpackaged/main/default/objects/KBA_Details__c/fields/Precise_ID_ID_Theft__c.field-meta.xml
<CustomField>
    <fullName>Precise_ID_ID_Theft__c</fullName>
    <label>Precise ID ID Theft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>