unpackaged/main/default/objects/KBA_Details__c/fields/Precise_ID_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Precise_ID_Reference_ID__c</fullName>
    <label>Precise ID Reference ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>