unpackaged/main/default/objects/KBA_Details__c/fields/Precise_ID_Score_KIQ__c.field-meta.xml
<CustomField>
    <fullName>Precise_ID_Score_KIQ__c</fullName>
    <label>Precise ID Score (KIQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>