unpackaged/main/default/objects/KBA_Details__c/fields/Public_Records__c.field-meta.xml
<CustomField>
    <fullName>Public_Records__c</fullName>
    <label>Public Records</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>