unpackaged/main/default/objects/KBA_Details__c/fields/SSN_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>SSN_Issue_Date__c</fullName>
    <label>SSN Issue Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>