unpackaged/main/default/objects/KBA_Details__c/fields/SSN_Result__c.field-meta.xml
<CustomField>
    <fullName>SSN_Result__c</fullName>
    <label>SSN Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>