unpackaged/main/default/objects/KBA_Details__c/fields/SSN_Result_Description__c.field-meta.xml
<CustomField>
    <fullName>SSN_Result_Description__c</fullName>
    <label>SSN Result Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>